ufw (0.27) UNRELEASED; urgency=low

  * don't do symlink check anymore (LP: #317700)

 -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 17 Jan 2009 07:15:25 -0600

ufw (0.26) RELEASED; urgency=low

  * fix formatting when using 'app update all' (LP: #300726)
  * add runtime version check for iptables and warn if using IPv6 application
    rules with iptables < 1.4
  * Makefile: depend on translations when making tarball
  * remove more useless newlines
  * man page updates
  * display interfaces and exact packet counters in 'status raw'
  * support REJECT for rules, default policy and default application policy
    (LP: #197322)
  * only flush and delete ufw chains
  * add a 'flush-all' command to ufw-init
  * add MANAGE_BUILTINS option to /etc/default/ufw, and when set to 'yes'
    flush the built-in chains too

 -- Jamie Strandboge <jamie@ubuntu.com>  Fri, 16 Jan 2009 07:01:38 -0600

ufw (0.25) RELEASE; urgency=low

  * new ChangeLog files for upstream tarballs. See ChangeLog.pre-0.25 for
    previous changes, including Ubuntu-specific changes
  * setup.py: don't install initscript anymore
  * add example (non-LSB) initscript to doc/initscript.example
  * split out initscript into ufw-init-functions, ufw-init (for use by
    ufw itself) and doc/initscript.example (for use by distributions). This
    makes ufw more robust and portable
  * don't stop the firewall via the initscripts if ufw is not enabled
    (LP: #311066)
  * rename skel-ui to skel-ui.example
  * README:
    - add Distributions section
    - update for initscript changes
    - update What's in a Name

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 22 Dec 2008 08:53:14 -0600