@@ -1,6 +1,9 @@
 ufw (0.27) UNRELEASED; urgency=low
 
   * don't do symlink check anymore (LP: #317700)
+  * don't do hidden file check anymore (LP: #319226). Hidden application
+    profiles are already skipped, so this check only bumps into revision
+    control systems
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 17 Jan 2009 07:15:25 -0600
 
